Linked html to stylesheet.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="body header">
+        woofala
         <div class="logo">
-
+            meow meow
         </div>
 
         <div class="right-links">
@@ -33,8 +35,8 @@
             </div>
         </div>
 
-        <div class=:right">
-            <!image will go in here>
+        <div class="right">
+            <!--image will go in here-->
         </div>
         
     </div>
@@ -85,7 +87,7 @@
         </div>
 
         <div class="right">
-            
+
         </div>
     </div>
 
