--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <div class="body header">
-        woofala
+        
         <div class="logo">
-            meow meow
+            Header Logo
         </div>
 
         <div class="right-links">
-
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link three</a>
         </div>
 
     </div>
