Hero image and credit formatting.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 
         <div class="right">
             <img src="shahin-khalaji-3z4ub6y3kYE-unsplash.jpg" alt="">
-            Photo by <a href="https://unsplash.com/@shahinkhalaji?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">shahin khalaji</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <div class = "image-credit">
+                Photo by <a href="https://unsplash.com/@shahinkhalaji?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">shahin khalaji</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </div>
+            
   
         </div>
         
