--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     
                 </div>
                 <div class="subtext">
-                    some subtext with text and such
+                    some subtext with text and such and some additional longer text to test some wrap
                 </div>
             </div>
 
