--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 </div>
                 <div class="subtext">
-                    some subtext with text and such
+                    some subtext with text and such and then we test with some even longer text to find a way to make sure the cards all match up in size but we may just leave this with the generic text so we can move on and get to something better but then i dont know how much this will do a thing.
                 </div>
             </div>
 
