--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="body two">
         <div class="heading">
-            The most random of information
+            Random Information
         </div>
         <div class="cards">
             <div class="card">
@@ -58,7 +58,7 @@
 
                 </div>
                 <div class="subtext">
-                    some subtext with text and such
+                    There is some subtext under an illustration or image
                 </div>
             </div>
 
@@ -67,7 +67,7 @@
                     
                 </div>
                 <div class="subtext">
-                    some subtext with text and such and some additional longer text to test some wrap
+                    There is some subtext under an illustration or image
                 </div>
             </div>
 
@@ -76,7 +76,7 @@
 
                 </div>
                 <div class="subtext">
-                    some subtext with text and such and then we test with some even longer text to find a way to make sure the cards all match up in size but we may just leave this with the generic text so we can move on and get to something better but then i dont know how much this will do a thing.
+                    There is some subtext under an illustration or image
                 </div>
             </div>
 
