Call to action initialized
Call to action initial population and styling.

--- a/index.html
+++ b/index.html
@@ -105,16 +105,18 @@
 
     <div class="body action">
         <div class ="left">
-            <div>
-
+            <div class="heading">
+                Call to action! It's time!
             </div>
-            <div>
-
+            <div class="subtext">
+                Sign up for our product by clicking that button right over there!
             </div>
         </div>
 
         <div class="right">
-
+            <div class="button">
+                Sign up
+            </div>
         </div>
     </div>
 
