Personal cat image and readme credit
Added a cat to test out rounded corners.
Added copied credit to README.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <div class="card">
                 <div class="box">
-
+                    <img src="https://images.unsplash.com/photo-1548247416-ec66f4900b2e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1020&q=80" alt="">
                 </div>
                 <div class="subtext">
                     Meowtri, could go without meow but ultimately a fan of meow.
